--- a/style.css
+++ b/style.css
@@ -65,9 +65,11 @@ h1 {
   width: 100%; height: 100%;
   background: rgba(0,0,0,0.7);
   overflow: auto;
+       
 }
 
 #modalContent {
+  
   background: white;
   color: black;
   margin: 8% auto;
@@ -76,15 +78,19 @@ h1 {
   max-width: 500px;
   text-align: center;
   position: relative;
+      
+          
 }
 
 #modalTitle {
   font-size: 1.5rem;
   margin-bottom: 10px;
+   background-color: white;
 }
 
 #modalText {
   margin-bottom: 15px;
+  background-color: white;
 }
 
 #modalMedia img, #modalMedia video {
@@ -183,12 +189,4 @@ h1 {
   }
 }
 
-img {
-  max-width: 300px; /* Set your desired maximum width */
-  max-height: 300px; /* Set your desired maximum height */
-  width: auto; /* Ensures the width adjusts proportionally */
-  height: auto; /* Ensures the height adjusts proportionally */
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 10px;
-}
+    
